k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clases-app-service
  namespace: default
  labels:
    app: clases-app
spec:
  type: LoadBalancer
  selector:
    app: clases-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8082
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
